# ombic-compressor

./: .gitignore  CMakeLists.txt  OMBIC_SIDECHAIN_FILTER_MODULE_SPEC.md  README.md  ombic-compressor.html
Plugin/: CMakeLists.txt  CMakeLists_root.example.txt  README.md
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginEditorV2.cpp  PluginEditorV2.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Source/Components/: CompressorSection.cpp  CompressorSection.h  MainViewAsTubeComponent.cpp  MainViewAsTubeComponent.h  MainVuComponent.cpp  MainVuComponent.h  MeterStrip.cpp  MeterStrip.h  OmbicLookAndFeel.cpp  OmbicLookAndFeel.h  OutputSection.cpp  OutputSection.h  SaturatorSection.cpp  SaturatorSection.h  SidechainFilterSection.cpp  SidechainFilterSection.h  TransferCurveComponent.cpp  TransferCurveComponent.h
Plugin/Source/Emulation/: DataLoader.cpp  DataLoader.h  FRCharacter.cpp  FRCharacter.h  IronTransformer.cpp  IronTransformer.h  MVPChain.cpp  MVPChain.h  MeasuredCompressor.cpp  MeasuredCompressor.h  NeonTapeSaturation.cpp  NeonTapeSaturation.h  PwmChain.cpp  PwmChain.h  PwmCompressor.cpp  PwmCompressor.h  THDCharacter.cpp  THDCharacter.h
Plugin/fonts/: README.md
design-spec-files/: How do developers override LookAndFeel_V4__drawRot.md  Is there published psychoacoustic or audio enginee.md  NEON_BULB_GUI_SPEC.md  OMBIC_COMPRESSOR_JUCE_GUIDE.md  OMBIC_COMPRESSOR_JUCE_SPEC.md  OMBIC_COMPRESSOR_V2_PRODUCT_GUI_SPEC_OUTLINE.md  SPEC_VS_JUCE_GAPS.md  UX_ASSESSMENT.md  main-vu-design-options.html  main-vu-toggle-demo.html  neon-bulb-mockup.html  v2-main-view-as-tube-mockup.html
docs/: ARCHITECTURE.md  ARCHIVE_ORIGINAL_VST_REPO.md  CURVE_ANALYZER_IMPROVEMENTS.md  CURVE_DATA_AND_IMPACT.md  CURVE_GRID_SAMPLING_THEORY.md  DESIGN_IMPROVEMENTS_BACKLOG.md  DOCS_ORGANIZATION_PLAN.md  FET_CURVE_COMPARISON_AND_SECRET_SAUCE.md  FET_PRESETS_REVIEW.md  GITHUB_COMMIT_AND_PUSH.md  GUI_BEST_PRACTICES_RESEARCH.md  GUI_DESIGN_ANALYSIS.md  GUI_SPEC.md  METERING_IMPROVEMENTS_DORROUGH_INDUSTRY.md  METERING_INTEGRATION_CHECKLIST.md  NEON_AND_VCA_FAQ.md  NEON_VISUAL_NEXT_STEPS.md  PERPLEXITY_GRAPHICS_RECOMMENDATIONS.md  PERPLEXITY_PROMPT_NEON_BULB_VISUAL.md  PWM_IMPLEMENTATION_ARCHITECTURE.md  PWM_MODULE_TECHNICAL_SPEC.md  TESTING_PROTOCOL.md  UX_IMPROVEMENTS_SPEC.md  VCA_MODE_PERPLEXITY_RESEARCH.md  VCA_VS_PWM_MODES.md  WORKFLOW_TWO_REPOS.md  emulation_evaluation.md  juce_port_handoff.md  mvp_usage.md  neon_bulb_saturation_research_spec.md  v1_vs_v2_comparison.md
output/dbcomp_vca/: compression_curve.csv  frequency_response.csv  manifest.json  thd_vs_level.json  timing.csv
output/fetish_v2/: compression_curve.csv  frequency_response.csv  manifest.json  thd_vs_level.json  timing.csv  validation_report.json
output/lala_v2/: compression_curve.csv  frequency_response.csv  manifest.json  thd_vs_level.json  validation_report.json
scripts/: build.sh  import-curve-data.sh
style/: OMBIC_SOUND_STYLE_GUIDE.md
